--- a/puppypage/portf/port.html
+++ b/puppypage/portf/port.html
@@ -2,40 +2,140 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABDURE_PORTOFOLIO</title>
-    <link rel="stylesheet" href="port.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ABDURE_PORTFOLIO</title>
+  <link rel="stylesheet" href="port.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/085ba09b41.js" crossorigin="anonymous" defer></script>
+  <script src="script.js" defer></script>
 </head>
 
 <body>
-    <div id="header">
-        <div class="container">
-            <nav>
-                <img src="/puppypage/logo-ab.png" class="logo" alt="Logo">
-                <ul id="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+  <!-- Header -->
+  <div id="header">
+    <div class="container">
+      <nav>
+        <img src="/puppypage/logo black.png" class="logo" alt="Logo">
+        <ul class="sun">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#about">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="header-text">
+        <h1>Hi, I am <span>Abdurahman</span></h1>
+        <p class="description">FULL STACK DEVELOPER <span class="and">AND</span> MOBILE APP DEVELOPER</p>
+      </div>
+    </div>
+  </div>
 
-            <div class="hero-content">
-                <p>Welcome to my Portfolio</p>
-                <h1>Hi, I'm <span>Abdure</span></h1>
-                <p>I'm a passionate web developer and designer creating beautiful digital experiences.</p>
-                <a href="#portfolio" class="btn">View My Work</a>
-            </div>
+
+  <!-- About -->
+  <div id="about">
+    <div class="container">
+      <div class="row">
+        <div class="about-col-1">
+          <img src="/puppypage/abdure-2.jpg" alt="Abdurahman">
         </div>
+        <div class="about-col-2">
+          <h1 class="sub-title">About Me</h1>
+          <p>Hi! I'm Abdurahman, a passionate Software Engineering student with a strong interest in Web Development and
+            Mobile App Development.
+            I love building creative and functional digital solutions, whether it's a responsive website or a powerful
+            mobile application.
+            Currently, I am honing my skills in both front-end and back-end technologies, and I'm always excited to
+            learn new tools and frameworks to bring ideas to life!</p>
+
+          <div class="tab-titles">
+            <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+            <p class="tab-links" onclick="opentab('education')">Education</p>
+          </div>
+
+          <div class="tab-contents active-tab" id="skills">
+            <ul>
+              <li><span>Problem Solver</span><br>Python Problem Solver</li>
+              <li><span>Web Development</span><br>Web App Development</li>
+              <li><span>App Development</span><br>Building Android/iOS apps</li>
+            </ul>
+          </div>
+
+          <div class="tab-contents" id="education">
+            <ul>
+              <li><span>Bachelor's Degree</span><br>Software Degree</li>
+              <li><span>Self-taught</span><br>Web & App Development</li>
+              <li><span>Certifications</span><br>Various online platforms</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact -->
+  <div id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="contact-left">
+          <h1 class="sub-title">Contact Me</h1>
+          <p><i class="fa-solid fa-paper-plane"></i> abdurahmanali693@gmail.com</p>
+          <p><i class="fa-solid fa-phone-flip"></i> +251916615516</p>
+          <div class="social-icons">
+            <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="contact-right">
+          <form name="submit-to-google-sheet">
+            <input type="text" name="Name" placeholder="Your Name" required>
+            <input type="email" name="Email" placeholder="Your Email" required>
+            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+            <button class="btnbtn2" type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
     </div>
 
-    <!-- The rest of your website sections would go here -->
-    <!-- About Section -->
-    <!-- Skills Section -->
-    <!-- Portfolio Section -->
-    <!-- Contact Section -->
+    <div class="copyright">
+      <p>Copyright © Abdurahman</p>
+    </div>
+  </div>
+
+  <!-- JavaScript (Put scripts at end for better performance) -->
+  <script>
+    var tablinks = document.getElementsByClassName("tab-links");
+    var tabcontents = document.getElementsByClassName("tab-contents");
+
+    function opentab(tabname) {
+      for (tablink of tablinks) {
+        tablink.classList.remove("active-link");
+      }
+      for (tabcontent of tabcontents) {
+        tabcontent.classList.remove("active-tab");
+      }
+      event.currentTarget.classList.add("active-link");
+      document.getElementById(tabname).classList.add("active-tab");
+    }
+  </script>
+
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxQ4IvwwEvtfFLnANqKi9AXZaEiVMWLWILdrKeIOanVL17oPTFmdsCIT1MeJEViZbSfsg/exec';
+    const form = document.forms['submit-to-google-sheet'];
+
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then(response => {
+          alert('Thank you! Your message has been sent.');
+          form.reset();
+        })
+        .catch(error => console.error('Error!', error.message));
+    });
+  </script>
+
 </body>
 
 </html>
