--- a/puppypage/portf/port.html
+++ b/puppypage/portf/port.html
@@ -20,7 +20,7 @@
         <ul class="sun">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#about">Skills</a></li>
+          <li><a href="#Skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -68,6 +68,27 @@
               <li><span>Certifications</span><br>Various online platforms</li>
             </ul>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- skills -->
+  <div id="Skills">
+    <div class="container">
+      <h1 class="sub-title">skills</h1>
+      <div class="skills-list">
+        <div>
+          <h2>Problem solver</h2>
+          <p>Skilled in solving complex problems using Python with efficient and scalable solutions</p>
+        </div>
+        <div>
+          <h2>Web Development</h2>
+          <p> Experienced in developing responsive and dynamic web applications using HTML, CSS, JavaScript, and
+            frameworks like React, Node.js, and Django.</p>
+        </div>
+        <div>
+          <h2>App Development</h2>
+          <p>Proficient in building functional and user-friendly Android and iOS apps.</p>
         </div>
       </div>
     </div>
