--- a/portfolio/portf/port.html
+++ b/portfolio/portf/port.html
@@ -47,11 +47,7 @@
             mobile application.
             Currently, I am honing my skills in both front-end and back-end technologies, and I'm always excited to
             learn new tools and frameworks to bring ideas to life!</p>
-
-          <!-- <div class="tab-titles">  -->
           <p class="tab-links">Education</p>
-          <!-- </div>  -->
-          <!-- <div class="tab-contents" id="education"> -->
           <ul>
             <li><span>Bachelor's Degree</span><br>Software Degree</li>
             <li><span>Self-taught</span><br>Web & App Development</li>
@@ -69,7 +65,7 @@
       <div class="skills-list">
         <div>
           <i class="fa-brands fa-python"></i>
-          <h2>Problem solver</h2>
+          <h2>Problem solving</h2>
           <p>Skilled in solving problems using Python with efficient and scalable solutions</p>
         </div>
         <div>
@@ -96,8 +92,9 @@
           <p><i class="fa-solid fa-paper-plane"></i> abdurahmanali693@gmail.com</p>
           <p><i class="fa-solid fa-phone-flip"></i> +251916615516</p>
           <div class="social-icons">
-            <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://t.me/liia_NO
+            "><i class="fa-brands fa-telegram"></i></a>
+            <a href="https://instagram.com/abduri_3a"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           </div>
         </div>
