--- a/portfolio/portf/port.html
+++ b/portfolio/portf/port.html
@@ -16,7 +16,7 @@
   <div id="header">
     <div class="container">
       <nav>
-        <img src="/puppypage/logo black.png" class="logo" alt="Logo">
+        <img src="/portfolio/logo black.png" class="logo" alt="Logo">
         <ul class="sun">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img src="/puppypage/abdure-2.jpg" alt="Abdurahman">
+          <img src="/portfolio/abdure-2.jpg" alt="Abdurahman">
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
