--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img src="/portfolio/abdure-2.jpg" alt="Abdurahman">
+          <img src="/portfolio/pabdure-2.jpg" alt="Abdurahman">
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
